--- a/web/fail.html
+++ b/web/fail.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<div style="color:red">login fail</div>
+<div style="color:red">login fail1</div>
 </body>
 </html>
